# discord-bot

./: .cache.sqlite  Dockerfile  auto.py  discord_bot.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: famous.py  mention.py  reaction.py  weather.py
cogs/meigen/: itsutsumimario.txt
